# llm_zettelkasten

./: .env.example  .gitignore  GEMINI.md  LICENSE  Manual_Funcionalidades_Agente.md  README.md  ZETTELBRAIN.md  pyproject.toml
.cursor/: mcp.json
.gemini/: settings.json
.gemini/skills/: bridge.md  close.md  ghost.md  ingest-article.md  ingest-paper-intro.md  ingest-paper.md  ingest-youtube.md  lint.md  recall.md  research-deep.md  start.md  trace.md  visual.md
.state/: hot.md  log.md
docs/: arquitetura.md  auditoria-documentacao.md  configuracao.md  manual-funcionalidades-agente.md  mcp-tools.md
skills/: bridge.md  close.md  ghost.md  ingest-article.md  ingest-paper-intro.md  ingest-paper.md  ingest-youtube.md  lint.md  recall.md  research-deep.md  start.md  trace.md  visual.md
src/: __init__.py  config.py  logger.py  setup.py  zettel_lint.py  zettel_mcp.py  zettelbrain_lint.py  zettelbrain_mcp.py
src/ingestion/: __init__.py  article_etl.py  youtube_etl.py
src/mcp/: server.py  tools_command.py  tools_embeddings.py  tools_file.py  tools_pdf.py  tools_search.py
tests/: test_article_etl.py  test_bridge.py  test_config.py  test_embeddings_tools.py  test_logger.py  test_pdf_tools.py  test_search_and_file_tools.py  test_setup.py  test_youtube_etl.py  test_zettel_lint.py  test_zettelbrain_lint.py
zettelbrain/: index.md  overview.md
zettelkasten/: index.md  overview.md
