[project]
name = "zettelbrain"
version = "0.1.0"
description = "Motor Python local para automacao, busca e MCP do cofre ZettelBrain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "mcp>=1.9.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "trafilatura>=1.12.0",
    "youtube-transcript-api>=1.0.3",
]

[project.scripts]
zettelbrain-mcp = "zettelbrain_mcp:main"
zettelbrain-youtube-etl = "ingestion.youtube_etl:main"
zettelbrain-article-etl = "ingestion.article_etl:main"
zettelbrain-lint = "zettelbrain_lint:main"
zb-mcp = "zettelbrain_mcp:main"
zb-youtube-etl = "ingestion.youtube_etl:main"
zb-article-etl = "ingestion.article_etl:main"
zb-lint = "zettelbrain_lint:main"
zb-install = "setup:main"
install = "setup:main"


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.11",
]


[tool.uv]
package = true


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/mcp"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".pytest-tmp",
    ".tmp",
    ".ruff_cache",
    ".uv-cache",
    ".venv",
    ".venv-codex",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
